test/must_fail/api/must_fail_file_write_data_not_simple.ngjs
#!/usr/bin/env ngspicejs
// file write wants 2 strings
// linter: ngspicejs-lint
"use strict";

file_write('asdf', []);
